syntax = "proto3";
package com.github.imusk.im.study.proto.demo;

option java_package = "com.github.imusk.im.study.proto.demo";
option java_outer_classname = "OneOfProto";

message MsgType1 {
    int32 value = 1;
}

message MsgType2 {
    bool value = 1;
}

message MsgType3 {
    int32 value1 = 1;
    int32 value2 = 2;
}

message MyMessage {
    uint32 uid = 1;
    uint32 pid = 2;
    uint32 utime = 3;

    oneof payload {
        MsgType1 msg1 = 4;
        MsgType2 msg2 = 5;
        MsgType3 msg3 = 6;
    }
}
